--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,17 +1,13 @@
 #console appender
-log4j.rootLogger=INFO, console
-log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%d{dd/MM/yyyy HH:mm:ss} - %m \n
 
-#FILE APPENDER  
-#log4j.rootLogger=INFO, FILE 
-#log4j.appender.FILE=org.apache.log4j.FileAppender  
-#log4j.appender.FILE.ImmediateFlush=true  
-#log4j.appender.FILE.threshold=INFO  
-#log4j.appender.FILE.File=C:/Development/Workspace/Teste/pre-dojo/src/main/resources/log.txt  
-#log4j.appender.FILE.layout=org.apache.log4j.PatternLayout 
-#log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} - %m \n
+FILE APPENDER  
+log4j.rootLogger=INFO, FILE 
+log4j.appender.FILE=org.apache.log4j.FileAppender  
+log4j.appender.FILE.ImmediateFlush=true  
+log4j.appender.FILE.threshold=INFO  
+log4j.appender.FILE.File=C:/Development/Workspace/Teste/pre-dojo/src/main/resources/log.txt  
+log4j.appender.FILE.layout=org.apache.log4j.PatternLayout 
+log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} - %m \n
 
 
 
